--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,6 +43,13 @@
         Explore official treaties, declarations, and archived papers from the
         war effort.
       </p>
+      <a
+        routerLink="/documents"
+        target="_blank"
+        class="mt-3 inline-block bg-green-700 text-white px-4 py-2 rounded hover:bg-green-900"
+      >
+        Read More
+      </a>
     </div>
 
     <!-- Interview Feature -->
@@ -51,9 +58,16 @@
     >
       <h2 class="text-xl font-semibold text-[#D62828] mb-4">🎤 Interviews</h2>
       <p class="text-gray-700 text-lg">
-        Listen to the voices of freedom fighters, civilians, and survivors who
-        witnessed history.
+        Listen to the voices of freedom fighters and survivors who witnessed
+        history.
       </p>
+      <a
+        routerLink="/interviews"
+        target="_blank"
+        class="mt-3 inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700"
+      >
+        Read More
+      </a>
     </div>
 
     <!-- Photo Gallery Feature -->
@@ -67,6 +81,13 @@
         View high-resolution photos capturing the essence of the 1971 Liberation
         War.
       </p>
+      <a
+        routerLink="/gallery"
+        target="_blank"
+        class="mt-3 inline-block bg-yellow-300 text-white px-4 py-2 rounded hover:bg-yellow-600"
+      >
+        Read More
+      </a>
     </div>
   </div>
 </section>
